@@ -3,11 +3,12 @@
 	+ Added .field_help class in public.css
 	+ Add field help to modelView.mas
 	+ Stripe tables in hang table
-	+ Use again the load gif when switching tabs
+	+ Use again the loading gif when switching tabs
 	+ Add completedAjaxRequest and startAjaxRequest to be used as helpers
 	  for automated testing with ANSTE
 	+ Fix port validation with "<=" 65535
-	+ Display as default value 24 in `IPNetwork` default setter
+	+ Display 24 as default value in `IPNetwork` default setter
+	+ Comment out some debug
 0.11.102
 	+ Added `override_user_modification` configuration parameter to
 	avoid user modification checkings and override them without asking
